# oh-my-pi

./: .agent_memory.json  .gitignore  .library-installed.json  AGENTS.md  CHANGELOG.md  Cargo.toml  PI_PANES_TEST_PROMPT.md  README.md  RESTART_PLAN.md  TASK_OBSERVER_SMOKE.md  TEST_PROMPT.md  github-issue-report2.md  lex-cherry-pick-swarm.yaml  package.json  rebuild-lex.zsh  rtk.md
.agent_memory/: 2026-05-28T11-55-50Z.json  2026-05-28T19-24-45Z.json
.claude/: settings.json
.omc/: .project-memory.json.tmp.065e00c6-77a7-461f-ba22-c43aa77b713b  T0-OBSERVATION.md  project-memory.json
.omp/: settings.json
crates/pi-shell/: ATTRIBUTION-RTK.md  Cargo.toml
crates/pi-shell/benches/fixtures/: chain_git_3segments.txt  chain_mixed_segments.txt  find_deep_50p8d.txt  find_shallow_5p1d.txt  find_wide_200p1d.txt  grep_large_100m10f.txt  grep_medium_3m1f.txt  grep_small_1m1f.txt  pytest_10pass_1fail.txt  pytest_5pass_1xfail_1skip.txt  pytest_all_passed.txt  pytest_malformed.txt  pytest_xdist.txt  pytest_zero_tests.txt
crates/pi-shell/src/: minimizer.rs  process.rs  shell.rs
crates/pi-shell/src/minimizer/: config.rs  detect.rs  engine.rs  plan.rs  primitives.rs
crates/pi-shell/src/minimizer/defs/: gcc.toml
crates/pi-shell/src/minimizer/filters/: ai_smart.rs  bun.rs  cargo.rs  cloud.rs  docker.rs  git.rs  lint.rs  listing.rs  mod.rs  node_tests.rs  pkg.rs  python.rs  rust_tools.rs  system.rs
crates/pi-shell/tests/: minimizer_chain_flag_matrix.rs
docs/: bash-tool-runtime.md  config-usage.md  environment-variables.md  extension-loading.md  extensions-to-remove.md  tree.md  (+10 more)
(+142 files in other folders)
