[package]
name = "pi-shell"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = []
# Opt-in AI-summary filter (W4 / rtk smart). Pulls in `reqwest` with rustls
# for outbound HTTPS calls. Default OFF so the standard pi-shell build never
# links the network stack or the TLS dependency tree.
ai-smart = ["dep:reqwest"]

[dependencies]
anyhow.workspace = true
bytes.workspace = true
brush-builtins.workspace = true
brush-core.workspace = true
brush-parser.workspace = true
clap.workspace = true
os_pipe.workspace = true
regex.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"], optional = true }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
xxhash-rust.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(windows)'.dependencies]
smallvec.workspace = true
windows-sys.workspace = true
winreg.workspace = true
